examples/test/testpolicy5952.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5952
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key13: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value28
      podSelector:
        matchLabels:
          key22: value19
          key1: value34
          key7: value13
